refactored leaderboards and classification from Quartz based scheduling to Jobrunr. Added Grafana and Prometheus execution metrics dashboards for logging and monitoring